terraform/security_group.tf
resource "aws_security_group" "teamsoft_web_server" {
  name        = "teamsoft_web-server-sg"
  description = "Grupo de seguranca para o webserver"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    #Apenas o range da subnet abaixo vai estar habilitado para acessar via ssh
    cidr_blocks = [var.ssh_allow_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = format("%s-sg", var.project_name)
  }
}
